Fix problem with page layout and ToC
There was a problem with the positioning of the table of contents when
the window was landscape rather than portrait, noticeable when the
window was resized. The ToC would overlap the page contents and resize
strangely itself.

Fixed by tweaking the HTML and CSS to make the margins and widths behave
better.

--- a/app/root/static/styles/api.scss
+++ b/app/root/static/styles/api.scss
@@ -46,13 +46,15 @@ $nav-bg-color: #2c3e50;
   #toc {
     width: 22%;
     background-color: #FFF;
-    margin-left: 64%;
     margin-top: 1em;
     border-color: $nav-bg-color;
     border-radius: 4px;
     padding: 0px;
 
     li.active {
+      :hover {
+        background-color: $nav-bg-color;
+      }
       background-color: $nav-bg-color;
       a {
         color: #FFF;
